css checkbox ofefers

--- a/index.html
+++ b/index.html
@@ -348,6 +348,8 @@
 <section class="services-choose">
     <h2>Дополнительные сервисы</h2>
 
+    <div class="show-month-price"><label class="checkbox"><input type="checkbox" checked>Показывать стоимость за месяц</label></div>
+
 
     <section class="main-services service-list list">
         <ul class="row-fluid">
