new services css

--- a/index.html
+++ b/index.html
@@ -346,10 +346,10 @@
         месяц</label></div>
 
 
-    <section class="service-list">
+    <section class="service-list row-fluid">
         <div class="span6">
             <ul>
-                <li>ОСАГО<span class="price">1 230 руб/мес.</span></li>
+                <li class="header">ОСАГО<span class="price">1 230 руб/мес.</span></li>
                 <li>
                     <label class="radio"><input type="radio" name="r1"/>Без ОСАГО
                         <span class="price">-1230 руб/мес.</span>
@@ -361,47 +361,40 @@
                     </label>
                 </li>
             </ul>
-
-
-            <span>Расширенная гарантия</span>
-
-
-            <a class="toggler"></a>
-
-            <div>
-                <ul>
-                    <li>
-                        <h4>1 год</h4>
-                        <span>+ 32 000 руб</span>
-                    </li>
-                    <li>
-                        <h4>2 года</h4>
-                        <span>+ 32 000 руб</span>
-                    </li>
-                </ul>
-                <a href="#">left</a>
-                <a href="#">right</a>
-            </div>
         </div>
 
-        <div class="span4"><span>Защита кредита</span>
-            <a class="toggler"></a>
-
-            <div>
-                <ul>
-                    <li>
-                        <h4>1 год</h4>
-                        <span>+ 32 000 руб</span>
-                    </li>
-                    <li>
-                        <h4>2 года</h4>
-                        <span>+ 32 000 руб</span>
-                    </li>
-                </ul>
-                <a href="#">left</a>
-                <a href="#">right</a>
-            </div>
+        <div class="span6">
+            <ul>
+                <li class="header">ОСАГО<span class="price">1 230 руб/мес.</span></li>
+                <li>
+                    <label class="radio"><input type="radio" name="r2"/>Без ОСАГО
+                        <span class="price">-1230 руб/мес.</span>
+                    </label>
+                </li>
+                <li>
+                    <label class="radio"><input type="radio" checked name="r2"/>ОСАГО простое
+                        <span class="price"></span>
+                    </label>
+                </li>
+            </ul>
         </div>
+
+        <div class="span6">
+            <ul>
+                <li class="header">ОСАГО<span class="price">1 230 руб/мес.</span></li>
+                <li>
+                    <label class="radio"><input type="radio" name="r3"/>Без ОСАГО
+                        <span class="price">-1230 руб/мес.</span>
+                    </label>
+                </li>
+                <li>
+                    <label class="radio"><input type="radio" checked name="r3"/>ОСАГО простое
+                        <span class="price"></span>
+                    </label>
+                </li>
+            </ul>
+        </div>
+
 
 </section>
 
