--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 </head>
 
 <body ng-controller="CalculatorCtrl">
-<aside ng-controller="MenuCtrl">
+<aside class="menu" ng-controller="MenuCtrl">
     <nav>
 
         <ul>
@@ -59,6 +59,59 @@
         </ul>
     </nav>
 </aside>
+
+<aside class="upgrade filter">
+    <h2>Автомобили</h2>
+
+    <div class="input-months clearfix">
+        <label>При сроке</label>
+        <div class="input">
+            <input type="input"/>
+            <label>мес.</label>
+        </div>
+        <div slider min="3" max="36" step="3"></div>
+    </div>
+
+
+    <section class="upgrades" ng-controller="UpgradeCtrl">
+        <section class="car-list list">
+            <a href="" ng-click="carUpgrade.left()" ng-show="carUpgrade.isLeft()">list left</a>
+            <ul>
+                <li ng-repeat="upgrade in carUpgrade.currentPage">
+                    <div ng-click="show(upgrade.id)">
+                        <h4>car{{ upgrade.id }}</h4>
+                        <span>32 000 руб</span>
+                    </div>
+                </li>
+            </ul>
+            <a href="" ng-click="carUpgrade.right()" ng-show="carUpgrade.isRight()">list right</a>
+        </section>
+
+
+        <h2>Сервисы</h2>
+        <section class="addination-services service-list list">
+            <a href="" ng-click="serviceUpgrade.left()" ng-show="serviceUpgrade.isLeft()">list left</a>
+            <ul>
+                <li class="selected" ng-repeat="upgrade in serviceUpgrade.currentPage">
+                    <span>Расширенная гарантия</span>
+
+                    <div ng-click="show(upgrade.id)">
+                        <h4>1 год → 2 года</h4>
+                        <span>+ 32 000 руб</span>
+                    </div>
+                </li>
+
+            </ul>
+            <a href="" ng-click="serviceUpgrade.right()" ng-show="serviceUpgrade.isRight()">list right</a>
+        </section>
+
+
+    </section>
+
+
+
+</aside>
+
 
 <header>
     <img src="img/logo.png">
@@ -446,38 +499,6 @@
 </div>
 
 
-<section class="upgrades" ng-controller="UpgradeCtrl">
-    <section class="car-list list">
-        <a href="" ng-click="carUpgrade.left()" ng-show="carUpgrade.isLeft()">list left</a>
-        <ul class="row-fluid">
-            <li class="span4" ng-repeat="upgrade in carUpgrade.currentPage">
-                <div ng-click="show(upgrade.id)">
-                    <h4>car{{ upgrade.id }}</h4>
-                    <span>32 000 руб</span>
-                </div>
-            </li>
-        </ul>
-        <a href="" ng-click="carUpgrade.right()" ng-show="carUpgrade.isRight()">list right</a>
-    </section>
-
-    <section class="addination-services service-list list">
-        <a href="" ng-click="serviceUpgrade.left()" ng-show="serviceUpgrade.isLeft()">list left</a>
-        <ul class="row-fluid">
-            <li class="selected span4" ng-repeat="upgrade in serviceUpgrade.currentPage">
-                <span>Расширенная гарантия</span>
-
-                <div ng-click="show(upgrade.id)">
-                    <h4>1 год → 2 года</h4>
-                    <span>+ 32 000 руб</span>
-                </div>
-            </li>
-
-        </ul>
-        <a href="" ng-click="serviceUpgrade.right()" ng-show="serviceUpgrade.isRight()">list right</a>
-    </section>
-
-
-</section>
 
 <section class="end-offer">
     <h2>Стандартный</h2>
