error with list fixed

--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
 
 <script type="text/javascript" src="js/app/app.js"></script>
 
-<script type="text/javascript" src="js/app/utility.js"></script>
+<script type="text/javascript" src="js/app/utils.js"></script>
 
 <script type="text/javascript" src="js/app/controllers/CalculatorCtrl.js"></script>
 <script type="text/javascript" src="js/app/controllers/CarConfigurationCtrl.js"></script>
