hide/show for compare and main section

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <ul>
 
             <li class="calculate-sum ng-class: {'active': show.isMaxPayment}"
-                ng-click="show.isMaxPayment=!show.isMaxPayment">
+                ng-click="toggleMaxPayment()">
                 <span>Расчет платежноспособности</span>
                 <dl>
                     <dt>max платеж</dt>
@@ -53,7 +53,7 @@
                 <a href="" ng-click="saveCalculation()">запомнить вариант</a>
             </li>
 
-            <li class="link">
+            <li class="link" ng-click="toggleCompare()">
                 <a href="">Сравнение</a>
                 <i></i>
             </li>
@@ -61,7 +61,7 @@
     </nav>
 </aside>
 
-<aside class="upgrade filter">
+<aside class="upgrade filter" ng-show="show.isMain">
     <h2>Автомобили</h2>
 
     <div class="input-months clearfix">
@@ -184,8 +184,8 @@
 <!--расчет платежноспобности-->
 
 
-<article>
-<section class="car-choose" ng-controller="CarConfigurationCtrl">
+<article ng-controller="CarConfigurationCtrl" ng-show="show.isMain">
+<section class="car-choose">
 <div class="title">
     <h2>Автомобиль</h2>
 
@@ -388,7 +388,9 @@
 
 </section>
 
-
+</article>
+<!--выбор машины-->
+<article ng-controller="LoanProgramSelectionCtrl" ng-show="show.isMain">
 <section class="credit-choose">
     <h2>Кредит</h2>
 
@@ -447,17 +449,7 @@
             <span>32 000 руб/мес</span>
         </div>
 
-        <div class="span3">
-            <h4>Стандартный 6.5%</h4>
-            <span>32 000 руб/мес</span>
-        </div>
-
-        <div class="span3">
-            <h4>Стандартный 6.5%</h4>
-            <span>32 000 руб/мес</span>
-        </div>
-
-        <div class="span3">
+        <div class="span3" ng-repeat="offer in offerListPage">
             <h4>Стандартный 6.5%</h4>
             <span>32 000 руб/мес</span>
         </div>
@@ -660,11 +652,10 @@
 
     <a class="btn-big" href="#">Оформить</a>
 </section>
-
-
 </article>
+<!--расчет кредита-->
 
-<article>
+<article ng-show="show.isCompare">
 
     <div class="row-fluid">
         <h4>Сравнение вариантов</h4>
